@@ -1,16 +1,15 @@
 package ru.yandex.practicum.filmorate.storage;
 
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.Film;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
-@Qualifier("memory")
 public class InMemoryFilmStorage implements FilmStorage {
     private final Map<Long, Film> films = new HashMap<>();
     private long nextId = 1;
@@ -87,11 +86,31 @@ public class InMemoryFilmStorage implements FilmStorage {
                 .filter(film -> year == null || (film.getReleaseDate() != null && film.getReleaseDate().getYear() == year))
                 .sorted((a, b) -> Integer.compare(b.getLikes().size(), a.getLikes().size()))
                 .limit(count)
-                .toList();
+                .toList(); // В Java 21 .toList() работает отлично и чище, чем Collectors.toList()
     }
 
     @Override
     public List<Film> getFilmsByDirector(Long directorId, String sortBy) {
-        return java.util.Collections.emptyList(); // Для InMemory можно оставить пустым
+        // Для InMemory-хранилища можно оставить заглушку или простую реализацию
+        return Collections.emptyList();
+    }
+
+    @Override
+    public List<Film> search(String query, String by) {
+        String lowerQuery = query.toLowerCase();
+        boolean searchTitle = by.contains("title");
+        boolean searchDirector = by.contains("director");
+
+        return films.values().stream()
+                .filter(film -> {
+                    boolean matchTitle = searchTitle && film.getName().toLowerCase().contains(lowerQuery);
+                    boolean matchDirector = searchDirector && film.getDirectors() != null &&
+                            film.getDirectors().stream()
+                                    .anyMatch(d -> d.getName().toLowerCase().contains(lowerQuery));
+                    return matchTitle || matchDirector;
+                })
+                .sorted(Comparator.comparingInt((Film f) -> f.getLikes() != null ? f.getLikes().size() : 0).reversed()
+                        .thenComparing(Film::getId))
+                .collect(Collectors.toList());
     }
 }
